--- a/css/main.css
+++ b/css/main.css
@@ -301,6 +301,12 @@ Navbar
   display: flex;
   flex-direction: column;
   /* todo */
+  height: 0;
+  overflow: hidden;
+  transition: var(--transition);
+}
+.show-links{
+  height: 310px;
 }
 
 .nav-link{
@@ -321,4 +327,80 @@ color: var(--primary-500);
 .contact-link a{
   padding: 0.15rem 1rem;
 }
+
+@media screen and (min-width:992px) {
+  .nav-btn{
+    display: none;
+  }
+  .navbar{
+    height: 6rem;
+  }
+  .nav-center{
+    display: flex;
+    align-items: center;
+  }
+  .nav-header{
+    height: auto;
+    margin-right:2rem ;
+  }
+  .nav-links{
+    height: auto;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+  }
+  .nav-link{
+    padding: 0;
+    border-top:none ;
+    margin-right: 1rem;
+    font-size: 1rem;
+  }
+
+  .contact-link{
+    margin-left: auto;
+    margin-right: 0;
+  }
+}
+
+/*
+=============== 
+Page
+===============
+*/
+
+.page{
+  background: red;
+  width: 90vw;
+  max-width: var(--max-width);
+  margin: 0 auto;
+  padding-top: 2rem;
+  min-height: calc(100vh-(6rem + 4rem));
+}
+
+/*
+=============== 
+Footer
+===============
+*/
+
+.page-footer{
+  height: 4rem;
+  background: var(--black);
+  color: var(--white);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.page-footer p{
+  margin-bottom: 0;
+}
+.footer-logo,.page-footer a{
+  color: var(--primary-500);
+}
+/*
+=============== 
+
+===============
+*/
 
