--- a/css/main.css
+++ b/css/main.css
@@ -399,6 +399,46 @@ Footer
 }
 /*
 =============== 
+Hero
+===============
+*/
+.hero{
+  height: 40vh;
+  background: url("https://source.unsplash.com/random/?recipes") center/cover no-repeat;
+  margin-bottom: 2rem;
+  border-radius: var(--borderRadius);
+  position: relative;
+}
+
+.hero-container{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.4);
+  border-radius: var(--borderRadius);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.hero-text{
+  text-align: center;
+  color: var(--white);
+}
+
+/* responsive */
+@media screen and (min-width:768px) {
+  .hero-text > h1{
+    font-size:4rem;
+    margin-bottom: 0;
+  }
+}
+
+/*
+=============== 
 
 ===============
 */
