--- a/css/main.css
+++ b/css/main.css
@@ -404,7 +404,7 @@ Hero
 */
 .hero{
   height: 40vh;
-  background: url("https://source.unsplash.com/random/?recipes") center/cover no-repeat;
+  background: url("https://source.unsplash.com/random/?recipes,indian-food") center/cover no-repeat;
   margin-bottom: 2rem;
   border-radius: var(--borderRadius);
   position: relative;
@@ -437,6 +437,117 @@ Hero
   }
 }
 
+/*
+=============== 
+Recipes
+===============
+*/
+
+.recipes-container{
+  display: grid;
+  gap: 2rem 1rem;
+}
+.tags-container{
+  order: 1;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 3rem;
+}
+.recipes-list{
+  display: grid;
+  grid-area: 2rem 1rem;
+  padding-bottom:3rem ;
+}
+
+.tags-container h4{
+  margin-bottom: 0.5rem;
+  font-weight: 500;
+}
+.tags-list{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+}
+
+.tags-list a{
+  display: block;
+  color: var(--grey-500);
+  transition:var(--transition);
+}
+
+.tags-list a:hover{
+color: var(--primary-500);
+}
+
+.recipe{
+  display: block;
+}
+
+.recipe-img{
+  height: 15rem;
+  border-radius: var(--borderRadius);
+  margin-bottom: 1rem;
+}
+
+.recipe h5{
+  margin-bottom: 0;
+  line-height: 1;
+  color: var(--grey-700);
+}
+.recipe p{
+  margin-bottom: 0;
+  line-height: 1;
+  margin-top: 0.5rem;
+  color: var(--grey-500);
+  letter-spacing: var(--letterSpacing);
+}
+
+/* responsive */
+
+@media screen and (min-width:576px) {
+  .recipes-list{
+    grid-template-columns: 1fr 1fr;
+  }
+  .recipe-img{
+    height: 10rem;
+  }
+}
+
+@media screen and (min-width:992px) {
+  .recipes-container{
+    grid-template-columns: 200px 1fr;
+  }
+  .recipe p{
+    font-size: 0.85rem;
+  }
+  .tags-container{
+    order: 0;
+  }
+  .tags-list{
+    grid-template-columns: 1fr;
+  }
+}
+
+@media screen and (min-width:1200px) {
+  .recipe h5{
+    font-size: 1.15rem;
+  }
+  .recipes-list{
+  grid-template-columns: repeat(3,1fr);
+  }
+}
+
+/*
+=============== 
+Error
+===============
+*/
+.error-page{
+  text-align: center;
+  padding-top: 5rem;
+}
+.error-page h1{
+  font-size: 9rem;
+}
 /*
 =============== 
 
