--- a/css/main.css
+++ b/css/main.css
@@ -548,9 +548,68 @@ Error
 .error-page h1{
   font-size: 9rem;
 }
+
+
 /*
 =============== 
+About
+===============
+*/
+.about-page h2{
+  text-transform: none;
+  font-weight: bold;
+}
 
+.about-page{
+  display: grid;
+  gap: 2rem 4rem ;
+  padding-bottom: 3rem;
+}
+
+.about-img{
+  border-radius: var(--borderRadius);
+  height: 300px;
+}
+/* responsive */
+
+@media screen and (min-width:992px) {
+  .about-page{
+    grid-template-columns: 1fr 1fr ;
+    grid-template-rows: 400px;
+    align-items: center;
+  }
+  .about-img{
+    height: 100%;
+  }
+}
+
+.featured-title{
+text-align: center;
+}
+
+
+/*
+=============== 
+Contact page
 ===============
 */
 
+.contact-form{
+  width: 100%;
+  margin: 0;
+
+}
+
+.contact-container{
+  display:grid;
+  gap: 2rem 3rem;
+  padding-bottom: 3rem;
+}
+
+
+@media screen and (min-width:992px) {
+  .contact-container{
+    grid-template-columns: 1fr 450px;
+    align-items: center;
+  }
+}
