--- a/css/main.css
+++ b/css/main.css
@@ -613,3 +613,174 @@ Contact page
     align-items: center;
   }
 }
+
+
+
+/*
+=============== 
+Tags page
+===============
+*/
+
+
+.tags-wrapper{
+  display: grid;
+  gap:2rem;
+  padding-bottom: 3rem;
+}
+
+.tag{
+  background: var(--grey-500);
+  border-radius: var(--borderRadius);
+  text-align: center;
+  color: var(--white);
+  text-replace: var(--transition);
+  padding: 0.75rem 0;
+}
+
+.tag:hover{
+  background: var(--primary-500);
+}
+
+.tag h5, .tag p{
+  margin-bottom: 0;
+}
+
+.tag h5{
+  font-weight: 600;
+}
+
+/* responsive */
+
+@media screen and (min-width:576px) {
+  .tags-wrapper{
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+
+@media screen and (min-width:992px) {
+  .tags-wrapper{
+    grid-template-columns: repeat(3,1fr);
+  }
+}
+
+
+/*
+=============== 
+single recipe page
+===============
+*/
+
+.recipe-hero{
+display: grid;
+gap: 3rem;
+}
+
+.recipe-hero-img{
+  height: 300px;
+  border-radius: var(--borderRadius);
+}
+
+.recipe-info  p{
+  color: var(--grey-600);
+}
+
+.recipe-icons{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  gap: 1rem;
+  margin:2rem 0 ;
+  text-align: center;
+}
+.recipe-icons i{
+  font-size: 1.5rem;
+  color: var(--primary-500);
+}
+
+.recipe-icons h5,.recipe-icons p{
+margin-bottom: 0;
+font-size:0.85rem ;
+}
+.recipe-icons p{
+  color: var(--primary-600);
+}
+
+.recipe-tags{
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  font-size: 0.7rem;
+  font-weight: 600;
+}
+
+.recipe-tags a{
+  background: var(--primary-500);
+  border-radius: var(--borderRadius);
+  color: var(--white);
+  padding: 0.05rem 0.5rem;
+  margin: 0 0.25rem;
+  text-transform: capitalize;
+}
+
+/* responsive */
+
+@media screen and (min-width:992px) {
+  .recipe-hero{
+    grid-template-columns: 4fr 5fr;
+    align-items: center;
+  }
+
+}
+
+.recipe-content{
+  display: grid;
+  gap: 2rem 5rem;
+  padding: 3rem 0;
+}
+
+@media screen and (min-width:992px) {
+  .recipe-content{
+    grid-template-columns: 2fr 1fr;
+  }
+
+}
+
+.single-instruction header{
+  display: grid;
+  grid-template-columns: auto 1fr;
+  gap:1.5rem ;
+  align-items: center;
+}
+.single-instruction header p{
+  text-transform: uppercase;
+  font-weight: 600;
+  margin-bottom:0 ;
+  color: var(--primary-500);
+}
+.single-instruction  > p{
+  color: var(--grey-700);
+}
+
+.single-instruction header div{
+height: 2px ;
+background: var(--grey-300);
+}
+
+.second-column{
+  display: grid;
+  row-gap: 2rem;
+}
+
+.single-ingredient{
+  border-bottom: 2px solid --grey-300;
+  padding-bottom: 0.75rem;
+  color: var(--grey-700);
+}
+
+.single-tools{
+  border-bottom: 2px solid --grey-300;
+  padding-bottom: 0.75rem;
+  color: var(--grey-500);
+  text-transform: capitalize;
+}
